# adel_engine

./: .gitignore  Cargo.toml  README.md
benches/: ash_vulkan_bench.rs  vulkano_bench.rs
notes/: spring2022.txt  winter2022.txt
src/: lib.rs
src/adel_app/: app.rs
src/adel_camera/: camera.rs
src/adel_ecs/: mod.rs  system.rs  world.rs
src/adel_input/: input_consumer.rs  keyboard_movement.rs  mod.rs
src/adel_physics/: collision.rs  mod.rs
src/adel_renderer/: adel_model.rs  definitions.rs  mod.rs  point_light_renderer.rs  renderer.rs  renderer_utils.rs  simple_renderer.rs  vulkano_context.rs  vulkano_definitions.rs  vulkano_pipeline.rs  vulkano_renderer.rs  vulkano_shaders.rs  vulkano_window.rs
src/adel_renderer/shaders/: model_renderer.frag  model_renderer.vert  point_light.frag  point_light.vert  push.frag  push_2d.frag  push_2d.vert  simple_shader.frag  simple_shader.vert  triangle.vert  uniform_buffer.frag  uniform_buffer.vert  uniform_buffer_simple.frag
src/adel_renderer/utility/: buffer.rs  buffers.rs  command_buffers.rs  constants.rs  context.rs  debug.rs  descriptor_sets.rs  descriptors.rs  frame_info.rs  mod.rs  model.rs  pipeline.rs  platforms.rs  presenter.rs  structures.rs  swapchain.rs  sync.rs  tools.rs
src/adel_renderer_ash/: definitions.rs  mod.rs  renderer.rs
src/adel_renderer_ash/shaders/: push.frag  push.vert  push_2d.frag  push_2d.vert  uniform_buffer.vert
src/adel_renderer_ash/utility/: buffers.rs  context.rs  debug.rs  model.rs  pipeline.rs  structures.rs  swapchain.rs  sync.rs
src/adel_renderer_vulkan/: constants.rs  definitions.rs  mod.rs  renderer.rs
src/adel_renderer_vulkan/shaders/: push.frag
src/adel_renderer_vulkan/utility/: buffers.rs  constants.rs  context.rs  device.rs  functions.rs  mod.rs  pipeline.rs  platforms.rs  structures.rs  swapchain.rs
src/adel_tools/: mod.rs
src/adel_winit/: window.rs
