[package]
name = "adel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
#vulkano = {path = "../local_resources/vulkano/vulkano"}
#vulkano-shaders = {path = "../local_resources/vulkano/vulkano-shaders"}
#vulkano-win = {path = "../local_resources/vulkano/vulkano-win"}
ash = "0.37.0"
inline-spirv = "0.1.4"


winit = "0.27.0"
#glam = "0.21.2"
chrono = "0.4.19"
more-asserts = "0.3.0"
log = "0.4"
simple_logger = "4.0.0"
image = "0.24.0"
#bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
tobj = "3.2.3"
nalgebra = "0.31.0"
#nalgebra-glm = "0.17.0"
num = "0.4.0"

[[bin]]
name = "hello_world"
path = "bin/hello_world.rs"

#[[bin]]
#name = "cube"
#path = "bin/cube.rs"
#
#[[bin]]
#name = "ash"
#path = "bin/ash.rs"
#
#[[bin]]
#name = "index_buffer"
#path = "bin/index_buffer.rs"
#
#[[bin]]
#name = "movement"
#path = "bin/movement.rs"

#[[bin]]
#name = "texture"
#path = "bin/texture.rs"

[[bin]]
name = "model"
path = "bin/model.rs"

[[bench]]
name = "vulkano_bench"
path = "benches/vulkano_bench.rs"
harness = false