[package]
name = "adel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
anyhow = "1.0"
ash = "0.37.0"
chrono = "0.4.19"
image = "0.24.0"
inline-spirv = "0.1.4"
log = "0.4"
more-asserts = "0.3.0"
nalgebra = "0.32.0"
num = "0.4.0"
simple_logger = "4.0.0"
tobj = "3.2.3"
winit = "0.28.0"

[[bin]]
name = "hello_world"
path = "bin/hello_world.rs"

[[bin]]
name = "3d_model"
path = "bin/3d_model.rs"

# TODO: Post Refactor add benchmark functions to test the time it takes to
# Initiate Vulkan
# Create Windows
# Load Textures
# Load models
[[bench]]
name = "vulkano_bench"
path = "benches/vulkano_bench.rs"
harness = false